payments component added

--- a/app/src/app/pages/maintenance/payments/payments.component.html
+++ b/app/src/app/pages/maintenance/payments/payments.component.html
@@ -47,6 +47,6 @@
         Payables
     </nb-card-header>
     <nb-card-body>
-        <ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
+        <ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onRowSelect($event)"></ng2-smart-table>
     </nb-card-body>
 </nb-card>
