--- a/app/src/app/pages/maintenance/payments/payments.component.html
+++ b/app/src/app/pages/maintenance/payments/payments.component.html
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <button nbButton status="danger" hero (click)="onClear()">Clear</button>
-                    <button nbButton status="success" hero type="submit" (click)="onSubmit()">Submit</button>
+                    <button nbButton status="success" hero type="submit" (click)="onSubmit()" [disabled]="paymentForm.invalid">Submit</button>
                 </form>
             </nb-card-body>
         </nb-card>
