--- a/app/src/app/pages/maintenance/advances/advances.component.html
+++ b/app/src/app/pages/maintenance/advances/advances.component.html
@@ -1,3 +1,42 @@
+<div class="row">
+    <div class="col-sm-12">
+        <nb-card>
+            <nb-card-header>Manage Advance</nb-card-header>
+            <nb-card-body>
+                <form novalidate [formGroup]="advanceForm">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <label for="vouchernumber" class="label">Voucher Number</label>
+                                <input type="text" nbInput fullWidth id="vouchernumber"
+                                    placeholder="Voucher Number" formControlName="voucherNumber" disabled>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <label for="amount" class="label">Transaction Type</label>
+                            <nb-select placeholder="Select Transaction Type" formControlName="transactionType"
+                                class="position-select" fullWidth>
+                                <nb-option value="debit">Debit</nb-option>
+                                <nb-option value="credit">Credit</nb-option>
+                            </nb-select>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <label for="amount" class="label">Amount</label>
+                                <input type="number" nbInput fullWidth id="amount"
+                                    placeholder="Amount" formControlName="amount">
+                            </div>
+                        </div>
+                    </div>
+                    <button nbButton status="danger" hero (click)="onClear()">Clear</button>
+                    <button nbButton status="success" hero type="submit" (click)="onSubmit()"
+                        [disabled]="advanceForm.invalid" style="margin-left: 10px">Submit</button>
+                </form>
+            </nb-card-body>
+        </nb-card>
+    </div>
+</div>
+
 <nb-card>
     <nb-card-header>
         Advances
@@ -5,7 +44,7 @@
 
     <nb-card-body>
         <ng2-smart-table [settings]="settings" class="color-inherit" [source]="source" (deleteConfirm)="onDeleteConfirm($event)"
-            (createConfirm)="onCreateConfirm($event)" (create)="onCreateConfirm($event)"
+            (createConfirm)="onCreateConfirm($event)" (create)="onCreateConfirm($event)" (userRowSelect)="onRowSelect($event)"
             (editConfirm)="onConfirmEdit($event)">
         </ng2-smart-table>
     </nb-card-body>
