--- a/app/src/app/pages/maintenance/users/users.component.html
+++ b/app/src/app/pages/maintenance/users/users.component.html
@@ -5,7 +5,7 @@
 
   <nb-card-body>
     <ng2-smart-table [settings]="settings" [source]="source" (deleteConfirm)="onDeleteConfirm($event)"
-      (createConfirm)="onCreateConfirm($event)" (create)="onCreateConfirm($event)"
+      (createConfirm)="onCreateConfirm($event)"
       (editConfirm)="onConfirmEdit($event)">
     </ng2-smart-table>
   </nb-card-body>
