--- a/app/src/app/pages/products/addedit/addedit.component.html
+++ b/app/src/app/pages/products/addedit/addedit.component.html
@@ -32,23 +32,23 @@
                         </nb-select>
                     </div>
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-12">
                             <ngx-barcode [bc-value]="bcValue" *ngFor="let bcValue of values" [bc-display-value]="true">
                             </ngx-barcode>
-                            <div class="form-group">
-                                <label for="barcode" class="label">Barcode</label>
-                                <input type="text" nbInput fullWidth autofocus id="barcode" placeholder="Barcode"
-                                    formControlName="barcode" [(ngModel)]="value">
-                            </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
+                                <label for="barcode" class="label">Barcode</label>
+                                <input type="text" nbInput fullWidth autofocus id="barcode" placeholder="Barcode"
+                                    formControlName="barcode">
+                            </div>
+                            <!-- <div class="form-group">
                                 <label for="productid" class="label">ID</label>
                                 <input type="text" nbInput fullWidth id="productid" placeholder="Product ID" disabled
                                     formControlName="productId">
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
