--- a/app/src/app/auth/login/login.component.html
+++ b/app/src/app/auth/login/login.component.html
@@ -1,3 +1,4 @@
+<h1 style="text-align: center; color: #188367; margin-top: -100px;">Abu Hamza Pet Shop</h1>
 <nb-card>
   <nb-card-header>Login Screen</nb-card-header>
   <nb-card-body>
@@ -25,9 +26,9 @@
           </p>
         </div>
       </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <nb-checkbox>Check me out</nb-checkbox>
-      </div>
+      </div> -->
       <button nbButton
       fullWidth
       status="primary"
