--- a/app/src/app/pages/products/addedit/addedit.component.html
+++ b/app/src/app/pages/products/addedit/addedit.component.html
@@ -42,7 +42,7 @@
                             <div class="form-group">
                                 <label for="barcode" class="label">Barcode</label>
                                 <input type="text" nbInput fullWidth autofocus id="barcode" placeholder="Barcode"
-                                    formControlName="barcode">
+                                    formControlName="barcode" [(ngModel)]="value">
                             </div>
                             <!-- <div class="form-group">
                                 <label for="productid" class="label">ID</label>
