Implemented Daily Sale Report

--- a/app/src/app/pages/reports/dashboard/dashboard.component.html
+++ b/app/src/app/pages/reports/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
             <div
                 style="height: 130px; border-radius: 5px; background-color: #F25749; margin-right: 30px; margin-top: 15px;">
                 <div style="padding: 20px">
-                    <div class="h3" style="color: white; border-bottom: 1px solid wheat">Expanses</div>
+                    <div class="h3" style="color: white; border-bottom: 1px solid wheat">Expenses</div>
                     <div class="h4" style="color: white; float: right">Pkr.{{ dashboardData?.expenses }}/-</div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 style="height: 130px; border-radius: 5px; background-color: #9A7565; margin-right: 30px; margin-top: 15px;">
                 <div style="padding: 20px">
                     <div class="h3" style="color: white; border-bottom: 1px solid wheat">Customers</div>
-                    <div class="h4" style="color: white; float: right">{{ dashboardData?.totalSuppliers }}</div>
+                    <div class="h4" style="color: white; float: right">{{ dashboardData?.totalCustomers }}</div>
                 </div>
             </div>
         </div>
