--- a/app/src/app/pages/maintenance/customers/customers.component.html
+++ b/app/src/app/pages/maintenance/customers/customers.component.html
@@ -5,7 +5,7 @@
     <nb-card-body>
         <div>
             <label for="supplier" class="label">Select Customer Type</label>
-            <nb-select placeholder="Select Account Type" formControlName="accountType" class="position-select" style="display: contents;"
+            <nb-select placeholder="Select Account Type" class="position-select" style="display: contents;"
             (selectedChange)="onCustomerTypeSelected($event)" class="position-select" selected="0">
                 <nb-option value="0">All Customers</nb-option>
                 <nb-option value="4">Advance Taken</nb-option>
@@ -13,8 +13,6 @@
             </nb-select>
         </div>
     </nb-card-body>
-
-
     <nb-card-body>
         <ng2-smart-table [settings]="settings" [source]="source" (deleteConfirm)="onDeleteConfirm($event)"
             (createConfirm)="onCreateConfirm($event)" (create)="onCreateConfirm($event)"
